# linkerhell

./: CMakeLists.txt  README.md
cpp-exe/: CMakeLists.txt  main.cpp
rust-lib/: Cargo.toml  cbindgen.toml
rust-lib/src/: lib.rs
scripts/linux/: linuxBuild.sh
scripts/macOS/: macOSBuild.sh
scripts/windows/: winBuild.cmd
